--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsup src/index.ts --format cjs,esm --dts"
+        "dev": "vitest",
+        "test": "vitest test",
+        "build": "tsup src/index.ts --format cjs,esm --dts",
+        "lint": "tsc",
+        "ci": "pnpm run lint && pnpm run test && pnpm run build"
     },
     "keywords": [],
     "author": "José Huaman",
@@ -14,5 +17,8 @@
         "@types/node": "^20.8.7",
         "tsup": "^7.2.0",
         "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "vitest": "^0.34.6"
     }
 }
