--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "devDependencies": {
         "@types/node": "^20.8.7",
         "tsup": "^7.2.0",
-        "typescript": "^5.2.2"
-    },
-    "dependencies": {
+        "typescript": "^5.2.2",
         "vitest": "^0.34.6"
     }
 }
