--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
     "name": "facturing-ts",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
     "scripts": {
         "dev": "vitest",
         "test": "vitest test",
         "build": "tsup src/index.ts --format cjs,esm --dts",
         "lint": "tsc",
         "ci": "pnpm run lint && pnpm run test && pnpm run build"
+        ,"release": "pnpm run lint && pnpm run test && pnpm run build && changeset publish"
     },
     "keywords": [],
     "author": "José Huaman",
-    "license": "ISC",
+    "license": "MIT",
     "devDependencies": {
+        "@changesets/cli": "^2.26.2",
         "@types/node": "^20.8.7",
         "tsup": "^7.2.0",
         "typescript": "^5.2.2",
