--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,5 +26,5 @@ jobs:
         with:
           publish: pnpm run release
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
