--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "facturing-ts",
     "version": "1.0.1",
     "description": "",
+    "private": false,
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
